--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.PreferencesActivity">
+        <activity android:name=".activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,7 +22,7 @@
         </activity>
         <activity android:name=".activities.MainActivity" />
         <activity android:name=".activities.ItineraryDetailActivity" />
-        <activity android:name=".activities.LoginActivity" />
+        <activity android:name=".activities.PreferencesActivity" />
         <activity android:name=".activities.CreateItineraryDetailActivity" />
 
         <meta-data
