prefs page, ui, etc

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,28 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.codepathms.cp.tripplannerapp">
 
+    <permission android:name="android.permission.ACCESS_FINE_LOCATION" android:protectionLevel="dangerous"/>
+    <permission android:name="android.permission.ACCESS_COARSE_LOCATION" android:protectionLevel="dangerous"/>
+
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-permission android:name="com.example.mapdemo.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
+    <permission android:protectionLevel="signature" android:name="${packageName}.permission.C2D_MESSAGE" />
+    <uses-permission android:name="${packageName}.permission.C2D_MESSAGE" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <application
         android:name=".application.TripplannerApplication"
@@ -13,7 +33,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.LoginActivity">
+        <activity android:name=".activities.LoginActivity" android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,15 +42,18 @@
         </activity>
         <activity android:name=".activities.MainActivity" />
         <activity android:name=".activities.ItineraryDetailActivity" />
-        <activity android:name=".activities.PreferencesActivity" />
+        <activity android:name=".activities.PreferencesActivity" android:noHistory="true" />
         <activity android:name=".activities.CreateItineraryDetailActivity" />
+
+        <uses-library android:required="true" android:name="com.google.android.maps" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBeSkdjiHmb2XcCAGr0ATg6-XCwSJvABkc" />
 
         <activity android:name=".activities.CreateItineraryActivity" />
-        <activity android:name=".activities.Preferences2Activity"></activity>
+        <activity android:name=".activities.Preferences2Activity" />
+        <activity android:name=".activities.MapActivity"></activity>
     </application>
 
 </manifest>
