--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ ext {
     supportLibVersion = '25.3.1'  // variable that can be referenced to keep support libs consistent
 }
 
+
 repositories {
     jcenter()
     maven { url "https://jitpack.io" }
@@ -30,28 +31,35 @@ repositories {
 
 def dbflow_version = "4.0.0-beta5"
 
+//apply plugin: 'android-apt'
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.parse:parseinterceptors:0.0.2'
-    compile 'com.parse:parse-livequery-android:1.0.2'
-    compile 'com.parse:parse-android:1.14.1'
-
     compile "com.android.support:appcompat-v7:${supportLibVersion}"
     compile "com.android.support:design:${supportLibVersion}"
     annotationProcessor "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
+    compile 'com.parse:parseinterceptors:0.0.2'
+    compile 'com.parse:parse-livequery-android:1.0.2'
+    compile 'com.parse:parse-android:1.14.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'org.parceler:parceler-api:1.1.6'
-    compile 'com.google.android.gms:play-services-places:9.4.0'
+    compile 'com.google.android.gms:play-services-places:9.8.0'
+    compile 'com.google.android.gms:play-services-maps:9.8.0'
+    compile 'com.google.android.gms:play-services-location:9.8.0'
+    compile 'com.google.maps.android:android-maps-utils:0.4+'
+    compile 'com.github.hotchemi:permissionsdispatcher:2.2.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support:cardview-v7:23.1.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'org.parceler:parceler:1.1.6'
+    //apt 'com.github.hotchemi:permissionsdispatcher-processor:2.2.0'
 }
