--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,9 +28,9 @@
     <application
         android:name=".application.TripplannerApplication"
         android:allowBackup="true"
-        android:icon="@drawable/walk"
+        android:icon="@drawable/logo_orange"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo_orange"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activities.LoginActivity" android:noHistory="true">
